# minihandle

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  util.rs
src/handle_manager/: handle.rs  handle_array.rs  handle_manager.rs  mod.rs
src/index_manager/: index_array.rs  index_manager.rs  mod.rs
