[package]
name = "minihandle"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["index"]
index = ["num-traits"]

[dependencies]
miniunchecked = { path = "../miniunchecked" }
static_assertions = "1.1.*"
num-traits = { version = "0.2", optional = true }